# groups

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  activeGroups.cfg  groups.json  vcpkg.json
.github/workflows/: serialize.yml
cmake/: colors.cmake  env.cmake
keys/include/: readme.md
rs-old/: main.rs  types.rs
src/: .gitignore  CMakeLists.txt  build.bat  main.cpp
src/BinaryStructure/: BinaryStructure.hpp
src/Builder/: Builder.cpp  Builder.hpp
src/Deserialize/: Deserialize.cpp  Deserialize.hpp
src/Encryption/: Encryption.cpp  Encryption.hpp
src/Fetcher/: Fetcher.cpp  Fetcher.hpp
src/Keys/: Keys.hpp
src/src/: Deserialize.hpp
